# kraken-trading-system

./: pyproject.toml
src/binance-trading-system/: main.py  market_maker.py  polymarket_client.py
src/kraken-trading-system/: kraken_client.py  main.py  order_book.py  websocket_feed.py
