[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Polymarket Market Making Model"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "py-clob-client>=0.20.0,<1.0.0"
]