[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken-trading-system"
version = "0.1.0"
description = "Kraken Trading System"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "python-dotenv>=1.0.0,<2.0.0",
    "python-kraken-sdk>=3.2.0,<4.0.0",
    "websocket-client>=1.9.0,<2.0.0"
]